--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
+	// thymeleaf版本
+	// id 'thymeleaf' version '3.1.2.RELEASE'
+	// id 'thymeleaf-layout-dialect' version '2.2.0'
 }
 
 group = 'com.rhein.bolgs'
@@ -16,9 +19,13 @@ repositories {
 }
 
 dependencies {
+	// 依赖
+	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	// springtest
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
