--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=blogsweb
+
+# thymeleaf编码格式
+spring.thymeleaf.encoding=UTF-8
+# thymeleaf缓存
+spring.thymeleaf.cache = false
+# thymeleaf模板
+spring.thymeleaf.mode = HTML5
